<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Information-->
        <TextView
            android:id="@+id/info_txt_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Information"
            android:textSize="5dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/info_information_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5dp"
            android:layout_gravity="right"/>

        <!--Symbol-->
        <TextView
            android:id="@+id/info_txt_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Symbol"
            android:textSize="5dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/info_symbol_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5dp"
            android:layout_gravity="right"/>

        <!--Last Refreshed-->
        <TextView
            android:id="@+id/info_txt_last_refreshed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LastRefreshed"
            android:textSize="5dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/info_last_refreshed_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5dp"
            android:layout_gravity="right"/>

        <!--Interval-->
        <TextView
            android:id="@+id/info_txt_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Interval"
            android:textSize="5dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/info_last_interval_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5dp"
            android:layout_gravity="right"/>

        <!--Output Size-->
        <TextView
            android:id="@+id/info_txt_output_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OutputSize"
            android:textSize="5dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/info_output_size_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5dp"
            android:layout_gravity="right"/>

        <!--Time Zone-->
        <TextView
            android:id="@+id/info_txt_time_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TimeZone"
            android:textSize="5dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/info_time_zone_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5dp"
            android:layout_gravity="right"/>

    </LinearLayout>

</RelativeLayout>